[gd_scene load_steps=2 format=3 uid="uid://ctpifev66ovmj"]

[ext_resource type="Script" path="res://mino.gd" id="1_5v2eh"]

[node name="O_mino" type="Node2D"]
script = ExtResource("1_5v2eh")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -30.0
offset_top = -30.0
offset_right = -0.5
offset_bottom = -0.5
color = Color(1, 1, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_top = -30.0
offset_right = 29.5
offset_bottom = -0.5
color = Color(1, 1, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = -30.0
offset_right = -0.5
offset_bottom = 29.5
color = Color(1, 1, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
offset_right = 29.5
offset_bottom = 29.5
color = Color(1, 1, 0, 1)

[node name="mino_ghost" type="Node2D" parent="."]
